--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Lab4</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/Carlosjj-Google-Jfk-Google-favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/shoppaymentorderbuy-25_icon-icons.com_73882.ico">
   <link rel="stylesheet" href="/path/to/cdn/bootstrap.min.css" />
   <script src="/path/to/cdn/jquery.min.js"></script>
   <script src="/path/to/cdn/bootstrap.min.js"></script>
